syntax = "proto3";

package datastore;
import "google/protobuf/empty.proto";

service DataStore {
  rpc Init(InitRequest) returns (InitResponse);
  rpc Shutdown(google.protobuf.Empty) returns (ShutdownResponse);
  rpc Get (GetRequest) returns (GetResponse);
  rpc Put (PutRequest) returns (PutResponse);
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
  bool found = 2;
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutResponse {
  string value = 1;
}

message InitRequest {
  string server_name = 1;
}

message InitResponse {
  bool success = 1;
}

message ShutdownResponse {
  bool success = 1;
}